[package]
name = "crosstream"
version = "0.1.0"
edition = "2024"

[dependencies]
# For nicer error handling.
thiserror = "2.0"

[dev-dependencies]
# For property based tests.
bolero = "0.13"

# For parameterized tests.
rstest = "0.26"

# For benchmark harness.
criterion = "0.7"

# For a reference implementation of ring buffer.
ringbuffer = { version = "0.16", features = ["alloc"] }

# For byte to record transmutations.
zerocopy = { version = "0.8", features = ["derive"] }

# Disable default benchmark harness.
[[bench]]
name = "hadron"
harness = false

# Preserve debug symbols for profiling.
[profile.bench]
inherits = "release"
debug = true
