[package]
name = "crosstream"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
# For property based tests.
bolero = "0.13"

# For benchmark harness.
criterion = "0.7"

# Disable default benchmark harness.
[[bench]]
name = "hadron"
harness = false

# Preserve debug symbols for profiling.
[profile.bench]
inherits = "release"
debug = true
