[package]
name = "crosstream-ring"
version = "0.1.0"
edition = "2024"

[dependencies]
# For allocating off-heap memory.
memmap2 = "0.9"

# For byte to record transmutations.
bytemuck = { version = "1.23", features = [
    "derive",
    "must_cast",
    "min_const_generics",
] }

[dev-dependencies]
# For property based tests.
bolero = "0.13"
