[package]
name = "crosstream-ring"
version = "0.1.0"
edition = "2024"

[dependencies]
# For allocating off-heap memory.
memmap2 = "0.9"

# For byte to record transmutations.
bytemuck = { version = "1.23", features = [
    "derive",
    "must_cast",
    "min_const_generics",
] }

[dev-dependencies]
# For property based tests.
bolero = "0.13"

# For generating identifiers in macro.
pastey = "0.1"

# For parameterized tests.
rstest = "0.26"

# For kani proofs.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
